comment section initial implementation

--- a/src/content/posts/kevin-zhou-demo.mdx
+++ b/src/content/posts/kevin-zhou-demo.mdx
@@ -1,5 +1,5 @@
 ---
-title: "IPhO Gold Medalist on Learning and Physics Prep"
+title: "IPhO Gold Medalist on Learning and Physics Prep (Demo)"
 authorId: "clz7gaxnn0000d6lclemte84f"
 tags:
   - "physics"
@@ -8,9 +8,25 @@ tags:
 
 <Callout>
   **The contents of the PDF were not written by Kevin Zhou for this site.** I'm
-  simply using it to demonstrate a post.
+  using it to demonstrate a post.
 </Callout>
 
 A resource I found incredibly insightful for not only physics olympiad preparation but also the way we should approach learning in general was Kevin Zhou's remarkable [Advice Handout](https://knzhou.github.io/writing/Advice.pdf).
 
 Clearly, his writing is far more detailed than what's needed for an article on this site&mdash;even just a few thoughful, contributing sentences is enough&mdash;but it gives an example of the kind of content that can be included and the impact an article should aim for.
+
+\*\*
+
+On the topic of insightful essays, I wanted to share some of Paul Graham's. I absolutely love his writing. If you don't know about them yet, you're really missing out.
+
+Here's one to get started: [What You'll Wish You'd Known](https://paulgraham.com/hs.html)
+
+Other useful and interesting ones
+
+- [How to Do What You Love](https://paulgraham.com/love.html)
+- [How to Do Great Work](https://paulgraham.com/greatwork.html)
+- [How to be an Expert in a Changing World](https://paulgraham.com/ecw.html)
+- [What You (Want To)\* Want](https://paulgraham.com/want.html)
+- [Is There Such a Thing as Good Taste?](https://www.paulgraham.com/goodtaste.html)
+
+and [so many more](https://www.paulgraham.com/articles.html)
